--- a/default-letsencrypt.conf.sample
+++ b/default-letsencrypt.conf.sample
@@ -1,7 +1,15 @@
 server {
   listen       80;
   server_name  example.com;
-  return 301 https://$host$request_uri;
+
+  location /.well-known {
+    alias /certbot.well-known;
+    allow all;
+  }
+
+  location / {
+    return 301 https://$host$request_uri;
+  }
 }
 
 server {
@@ -21,8 +29,8 @@ server {
   ssl_stapling_verify on;
   add_header Strict-Transport-Security max-age=15768000;
 
-  location ~ /.well-known {
-    root /certbot.well-known;
+  location /.well-known {
+    alias /certbot.well-known;
     allow all;
   }
 
