--- a/default-letsencrypt.conf.sample
+++ b/default-letsencrypt.conf.sample
@@ -1,9 +1,10 @@
 server {
   listen       80;
   server_name  example.com;
-
+  
   location /.well-known {
-    alias /certbot.well-known;
+    root /certbot;
+    default_type "text/plain";
     allow all;
   }
 
@@ -30,7 +31,8 @@ server {
   add_header Strict-Transport-Security max-age=15768000;
 
   location /.well-known {
-    alias /certbot.well-known;
+    root /certbot;
+    default_type "text/plain";
     allow all;
   }
 
